k8sbfr-etherpad/etherpadDeployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etherpad
  labels:
    app: etherpad
spec:
  containers:
    - name: etherpad
      image: etherpad/etherpad
      ports:
        - containerPort: 9001
    - name: sh
      image: busybox
      command:
        - "/bin/sh"
        - "-c"
        - "--"
      args:
        - "while true; do sleep 30; done;"
#  volumes:
#    - name: config-volume
#      configMap:
#        name: riotwebconfig
  restartPolicy: Always
