k8sbfr-etherpad/etherpadServiceClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad-cip
spec:
  selector:
    app: etherpad
  ports:
    - port: 80
      targetPort: 9001
  type: ClusterIP
